# NBN

./: README.md
android-app/: build.gradle.kts  settings.gradle.kts
android-app/app/: build.gradle.kts
android-app/app/src/androidTest/java/com/example/nbn/ui/main/: MainScreenTest.kt
android-app/app/src/main/: AndroidManifest.xml
android-app/app/src/main/java/com/example/nbn/: MainActivity.kt  Navigation.kt  NavigationKeys.kt
android-app/app/src/main/java/com/example/nbn/data/: AppDatabase.kt  DataRepository.kt  Item.kt  ItemDao.kt  SyncWorker.kt
android-app/app/src/main/java/com/example/nbn/network/: ApiClient.kt
android-app/app/src/main/java/com/example/nbn/theme/: Color.kt  Theme.kt  Type.kt
android-app/app/src/main/java/com/example/nbn/ui/main/: MainScreen.kt  MainScreenViewModel.kt
android-app/app/src/main/java/com/example/nbn/ui/screens/: DemoState.kt  OnboardingScreen.kt  OrchestratorScreen.kt  OrchestratorViewModel.kt  PulseScreen.kt  PulseViewModel.kt  VaultScreen.kt  VaultViewModel.kt
android-app/app/src/main/res/values/: strings.xml  themes.xml
android-app/app/src/test/java/com/example/nbn/ui/main/: MainScreenViewModelTest.kt
android-app/gradle/: libs.versions.toml
backend/: .env  database.py  init_db.py  main.py  nbn_local.db  pyproject.toml  serverless.yml  test_agents.py  test_models.py  weaviate_schema.py
backend/agents/: __init__.py  comms.py  devops.py  ops.py  orchestrator.py  state.py
backend/models/: __init__.py  inventory.py
